______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.27:

* Enabled javac optimizations.

* Switched from Checkstyle 2.x to Checkstyle 3.0.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.26:

* Storing links to result codes in API instance.

* Code cleanup.

* In function specification documentation:
  - Only displaying result code in example if there is one.
  - Showing and linking to API result codes.
  - Renamed 'code' attribute to 'name' in resultcode-ref element type.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.25:

* Fixed bug introduced in 0.23 that causes all functions declared in the API
  to be invisible.

* Code cleanup.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.24:

* Separating words with an underscore in generated name of result code in API
  class.

* Removed class DefaultReturnCodes (deprecated since 0.15).

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.23:

* Generating static final fields for result codes in API class.

* Using Singleton pattern for API subclasses.

* ResultCode class is now public.

* Cleaned up generated code in the API class.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.22:

* Improved message when logging succeeded calls.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.21:

* Fixed bug in successful call logging.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.20:

* Cleaned up fallback initialization of Log4J.

* Class APIServlet directly implements Servlet interface, no longer derives
  from HttpServlet class.
